Increased z-index to fix courses page overlap

--- a/wp-content/themes/boss-child/css/main.css
+++ b/wp-content/themes/boss-child/css/main.css
@@ -37,7 +37,7 @@ a.btn {
 #header-main {
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 5;
   width: 100%;
   background-color: #fff; }
   #header-main #mastlogo {
